changed import syntax

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "nodejs-quiz",
   "version": "1.0.0",
+  "type": "module",
   "description": "*This program was a homework assignment at LaunchCode's Lc101 (2019)*",
   "main": "main.js",
   "scripts": {
