--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "*This program was a homework assignment at LaunchCode's Lc101 (2019)*",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/theodoremoreland/NodeJsQuiz#readme",
   "dependencies": {
-    "inquirer": "^9.2.12"
+    "inquirer": "^9.2.12",
+    "jest": "^29.7.0"
   }
 }
