--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/theodoremoreland/NodeJsQuiz#readme",
   "dependencies": {
+    "figlet": "^1.7.0",
     "inquirer": "^9.2.12",
     "jest": "^29.7.0"
   }
