--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/theodoremoreland/NodeJsQuiz#readme",
   "dependencies": {
+    "express": "^4.18.2",
     "figlet": "^1.7.0",
     "inquirer": "^9.2.12",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "ws": "^8.16.0"
   }
 }
