--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "type": "module",
   "description": "*This program was a homework assignment at LaunchCode's Lc101 (2019)*",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "jest",
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
